# content-marketing-flow

./: 1_blog_post.md  2_facebook_post.md  3_instagram_post.md  4_linkedin_post.md  5_twitter_tweet.md  README.md  pyproject.toml
src/content_marketing_flow/: main.py
src/content_marketing_flow/crews/content_creation_crew/: content_creation_crew.py
src/content_marketing_flow/crews/content_creation_crew/config/: agents.yaml  tasks.yaml
src/content_marketing_flow/crews/platform_adaptation_crew/: platform_adaptation_crew.py
src/content_marketing_flow/crews/platform_adaptation_crew/config/: agents.yaml  tasks.yaml
