[project]
name = "content_marketing_flow"
version = "0.1.0"
description = "content_marketing_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
]

[project.scripts]
kickoff = "content_marketing_flow.main:kickoff"
run_crew = "content_marketing_flow.main:kickoff"
plot = "content_marketing_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
